# parse-tag

./: .gitignore  CMakeLists.txt  README.md
include/parsetag/: id3.hpp
src/: id3.cpp
tests/: CMakeLists.txt  tests.cpp
